# avrdude_gui_qt

./: README.build  README.md
avrdude_gui_qt6/: CMakeLists.txt  README.md  WINDOWS_PACKAGING.md  avrdude_backend.cpp  avrdude_backend.h  build_and_package.bat  devicedialog.cpp  devicedialog.h  devinfodialog.cpp  devinfodialog.h  helpdialog.cpp  helpdialog.h  logleveldialog.cpp  logleveldialog.h  main.cpp  mainwindow.cpp  mainwindow.h  memoriesdialog.cpp  memoriesdialog.h  programmerdialog.cpp  programmerdialog.h  windows.iss  windows.yml
